syntax = "proto3";

package go.micro.srv.v1.dcmgr;

service DcMgr {
//    Get gets a DataCenter by ID
    rpc Get(ID) returns (DataCenter) {
    }

    rpc Create(DataCenter) returns (Response) {
    }
}

message ID {
    int64 id = 1;
}

message DataCenter {
    int64  id = 1;  // datacenter id
    string name = 2; // datacenter name
    int32 status = 3; // 0: enable, 1: disable
}

message Response {
}

